# agentgauge

./: README.md  pyproject.toml
agentgauge/: __init__.py  cli.py  dataset.py  regression.py  report.py  runner.py  scorers.py
examples/: cases.jsonl  quickstart.py
tests/: test_scorers.py
